Fixed vh bug on iOS and content index rendering glitch on mobile

--- a/src/styles/donaldtrump.css
+++ b/src/styles/donaldtrump.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fugaz+One');
 
 body.whattrumpsaid{
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -598,6 +598,26 @@ body.whattrumpsaid .minion-datapopup .item-tweets .tweet-item .ts{
 
     body.whattrumpsaid .minion-timestamp{
         display: none;
+    }
+
+    body.whattrumpsaid .minion-content-index{
+        margin-top: 30px;
+    }
+
+    body.whattrumpsaid .minion-content-index .contentindex-guide{
+        width: 25px;
+        height: 25px;
+        padding: 0;
+        justify-content: center;
+        border-radius: 8px;
+    }
+
+    body.whattrumpsaid .minion-content-index .contentindex-guide > p{
+        display: none;
+    }
+
+    body.whattrumpsaid .minion-content-index .contentindex-guide .contentindex-reveal{
+        margin-left: 0;
     }
 
     .presidenttrump-analysis-data .analysis-hero{
